--- a/src/app/template/nav-bar/nav-bar.component.html
+++ b/src/app/template/nav-bar/nav-bar.component.html
@@ -1,11 +1,19 @@
+
+<style>
+  .brand-logo{
+    margin: 5px;
+  }
+</style>
+
+
 <nav>
     <div class="nav-wrapper">
-      <a href="#" class="brand-logo">Confesiones.com</a>
+      <a href="" routerLink="home" class="brand-logo">Confesiones.com</a>
       <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
+        <li><a href="" routerLink="users/post-reading" >Muro</a></li>
         <li><a href="" routerLink="users/post-form" >Crear un post</a></li>   
-        <li><a href="" routerLink="users/post-reading" >Publicados</a></li>
-        <li><a href="">Registrarme</a></li>
+        <li><a href="" routerLink="auth/login">Login</a></li>
       </ul>
     </div>
   </nav>
@@ -13,6 +21,6 @@
   <ul class="sidenav" id="mobile-demo">
     <li><a href="">Crear un post</a></li>   
     <li><a href="">Publicados</a></li>
-    <li><a href="">Registrarme</a></li>
+    <li><a href=""> </a></li>
   </ul>
           
