--- a/src/app/modules/users/post-reading/post-reading.component.html
+++ b/src/app/modules/users/post-reading/post-reading.component.html
@@ -1,8 +1,8 @@
-<p>post-reading works!</p>
-<div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/office.jpg">
-    </div>
+<title>Muro</title>
+
+<div class="container">
+  <h1>Muro</h1>
+  <div class="card">
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
       <p><a href="#">This is a link</a></p>
@@ -12,3 +12,8 @@
       <p>Here is some more information about this product that is only revealed once clicked on.</p>
     </div>
   </div>
+</div>
+
+
+
+
