--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -1,6 +1,14 @@
+<title>Home | Confesiones</title>
+
+<style>
+    .homeImage{
+        height: 500px;
+    }
+</style>
 
 <div class="container">
     <h3>Welcome to confesions.com home!</h3>
+    
 <p>
     Vacantes
     Habitaciones
