auth module pages

--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,8 +1,4 @@
 
-
-
-<div class="center-align">
-
-    <p>developed by softEsteban <br> Manizales - 2022 ®</p>
-    
+<div class="center-align" style="margin-top: 200px;">
+    <p>developed by <a href="https://www.github.com/softEsteban" target="_blank">softEsteban</a><br> Manizales - 2022 ®</p>
 </div>
