--- a/src/app/template/nav-bar/nav-bar.component.html
+++ b/src/app/template/nav-bar/nav-bar.component.html
@@ -1,14 +1,17 @@
 
 <style>
   .brand-logo{
-    margin: 5px;
+    margin-left: 10px;
+  }
+  #dotcom{
+    font-weight: lighter;
   }
 </style>
 
 
 <nav>
     <div class="nav-wrapper">
-      <a href="" routerLink="home" class="brand-logo">Confesiones.com</a>
+      <a href="" routerLink="home" class="brand-logo">Confesiones.com</a>   
       <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="" routerLink="users/post-reading" >Muro</a></li>
