--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,49 +1,48 @@
 <title>Login | Auth</title>
 
 <style>
-    h3{
-        margin-bottom: 25px;
-        margin-top: 25px;
+    .headcito{
+        color: gray;
+        margin-bottom: 60px;  
+    }
+    #registerPage{
+      color: gray;
+      text-decoration: underline;
+    }
+    #registerPage:hover{
+      color: rgb(65, 65, 65);
+    }
 
-    }
-    .container{
-        background-color: #ffcdd245;
-        border-radius: 12px;
-    }
-    form{
-        margin: 25px;
-    }
-    button{
-        margin: 40px;
-    }
-</style>
-
-<div class="container center-align">
+  </style>
+  
+  <div class="container">
+      <form class="col s12">
+  
+        <div class="headcito">
+          <h3>Login</h3>
+          <p>Accede al sistema y sus funcionalidades</p>
+        </div>
+  
+        <div class="input-field col s6">
+          <input id="first_name" type="text" class="validate">
+          <label for="first_name">Usuario</label>
+        </div>
+  
+        <div class="input-field col s12">
+          <input id="password" type="password" class="validate">
+          <label for="password">Contraseña</label>
+        </div>
+  
+        <div class="input-field col s12">
+          <button class="btn waves-effect waves-light"  type="submit" name="action">Ingresar</button>
+        </div>
 
         <div>
-
-            <h2>Log In</h2>
-            <form >
-
-                <div>
-                <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
-                </div>
-
-
-                <div>
-                <input id="password" type="password" class="validate">
-                <label for="password">Password</label>
-                </div>
-
-                <div>
-                    <button class="btn waves-effect waves-light" type="submit" name="action">Enviar
-                    </button>
-                </div>
-
-            </form>
-
+            <a href="" routerLink="/auth/register" id="registerPage">Registrarme</a>
         </div>
-    
-
-</div>
+        
+  
+      </form>
+  
+  
+    </div>
