--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,1 +1,41 @@
-<p>register works!</p>
+<title>Sign In</title>
+<style>
+  .headcito{
+      color: gray;
+      margin-bottom: 60px;
+  }
+</style>
+
+<div class="container">
+    <form class="col s12">
+
+      <div class="headcito">
+        <h3>Registro de usuario</h3>
+        <p>Registrandote puedes ver el estado de tus solicitudes, guardar posts y comentar</p>
+      </div>
+
+      <div class="input-field col s6">
+        <input id="first_name" type="text" class="validate">
+        <label for="first_name">Usuario/correo</label>
+      </div>
+
+      <div class="input-field col s12">
+        <input id="password" type="password" class="validate">
+        <label for="password">Contraseña</label>
+      </div>
+
+      <div class="input-field col s12">
+        <input id="password" type="password" class="validate">
+        <label for="password">Contraseña x2</label>
+      </div>
+      
+      <div class="input-field col s12">
+        <button class="btn waves-effect waves-light" type="submit" name="action">Registrarme</button>
+      </div>
+      
+
+    </form>
+
+
+  </div>
+        
