--- a/src/app/modules/users/post-reading/post-reading.component.html
+++ b/src/app/modules/users/post-reading/post-reading.component.html
@@ -1,7 +1,40 @@
 <title>Muro</title>
 
+<style>
+  .headcito{
+      color: gray;
+      margin-bottom: 60px;
+  }
+
+  #searchBox{
+    border: 1px solid grey;
+    border-radius: 35px;
+    margin-bottom: 30px;
+  }
+  #inputBox{
+    text-decoration: none;
+    width: 50%;
+  }
+  #iconSearch{
+    margin: 7px;
+  }
+</style>
+
 <div class="container">
-  <h1>Muro</h1>
+  
+  <div class="headcito">
+    <h3>Muro</h3>
+    <p>Busca, filtra y guarda las publicaciones</p>
+  </div>
+
+
+  <div id="searchBox">
+    <a class="btn-floating" id="iconSearch"><i class="material-icons">search</i></a>
+    <input type="text" id=inputBox>
+  </div>
+
+
+
   <div class="card">
     <div class="card-content">
       <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
