--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<title>Sign In</title>
+<title>Sign up | Registro</title>
 <style>
   .headcito{
       color: gray;
@@ -7,25 +7,34 @@
 </style>
 
 <div class="container">
-    <form class="col s12">
+    <form class="col s12" role="form" [formGroup]="newUser" (ngSubmit)="registerUser(newUser)">
 
       <div class="headcito">
         <h3>Registro de usuario</h3>
-        <p>Registrandote puedes ver el estado de tus solicitudes, guardar posts y comentar</p>
+        <p>Registrándote puedes ver el estado de tus solicitudes, guardar posts y comentar</p>
       </div>
 
       <div class="input-field col s6">
-        <input id="first_name" type="text" class="validate">
+        <input  id="username" name="username" type="text" class="form-control"
+                [ngClass]="{'is-invalid':newUser.get('userName')?.invalid,
+                            'is-valid':newUser.get('userName')?.valid}"
+                          formControlName="userName">
         <label for="first_name">Usuario/correo</label>
       </div>
 
       <div class="input-field col s12">
-        <input id="password" type="password" class="validate">
+        <input  id="passw" name="passw" type="password" class="password"
+                [ngClass]="{'is-invalid':newUser.get('passw')?.invalid,
+                            'is-valid':newUser.get('passw')?.valid}"
+                          formControlName="passw">
         <label for="password">Contraseña</label>
       </div>
 
       <div class="input-field col s12">
-        <input id="password" type="password" class="validate">
+        <input  id="passw2" name="passw2" type="password" class="password"
+                [ngClass]="{'is-invalid':newUser.get('passw2')?.invalid,
+                            'is-valid':newUser.get('passw2')?.valid}"
+                          formControlName="passw2">
         <label for="password">Contraseña x2</label>
       </div>
       
