userdata in local storage for authentication

--- a/src/app/modules/users/post-form/post-form.component.html
+++ b/src/app/modules/users/post-form/post-form.component.html
@@ -15,7 +15,9 @@
 
     <div class="headcito">
       <h3>Escribe tu confesión o anuncio</h3>
-      <p>Una vez envies tu publicación, el admin la revisará y la aprobará</p>
+      <p>Una vez envies tu publicación, el admin la revisará y la aprobará. 
+         Sólo si eres un usuario registrado puedes consultar el estado de tu 
+         solicitud e historial </p>
     </div>
 
     <form role="form" 
