--- a/src/app/template/footer/footer.component.html
+++ b/src/app/template/footer/footer.component.html
@@ -1,4 +1,9 @@
+<style>
+    .myFooter{
+        color: gray;
+    }
+</style>
 
-<div class="center-align" style="margin-top: 200px;">
+<div class="center-align myFooter" style="margin-top: 200px;">
     <p>developed by <a href="https://www.github.com/softEsteban" target="_blank">softEsteban</a><br> Manizales - 2022 ®</p>
 </div>
