--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -1,13 +1,19 @@
-<title>Home | Confesiones</title>
+<title>Confesiones | Home</title>
+
+<style>
+    .headcito{
+        color: gray;
+        margin-bottom: 60px;  
+    }
+</style>
 
 <div class="container">
-    <h3>Welcome to confesiones.com home!</h3>
-    
-<p>
-    Vacantes
-    Habitaciones
-    Confesiones
-    Servicios
-    Recomendaciones
-</p>
+
+    <div class="headcito">
+        <h2>Welcome users!</h2>    
+        <h4>confesiones.com WebApp</h4>
+        <br>
+        <p>Encuentra vacantes, habitaciones, confesiones, servicios y
+            recomendaciones </p>
+    </div>
 </div>
