--- a/src/app/template/nav-bar/nav-bar.component.html
+++ b/src/app/template/nav-bar/nav-bar.component.html
@@ -15,9 +15,9 @@
       <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="" routerLink="users/post-reading" >Muro</a></li>
-        <li  ><a href="" routerLink="users/post-form" >Crear un post</a></li>   
+        <!-- <li  ><a href="" routerLink="users/post-form" >Crear un post</a></li>   
         <li  ><a href="" routerLink="auth/login">Guardados</a></li>
-        <li  ><a href="" routerLink="**">Opciones</a></li>
+        <li  ><a href="" routerLink="**">Opciones</a></li> -->
         <li id="userLogin"><a href="" routerLink="auth/login">Login</a></li>
         <li><span id="userLog"></span></li> 
 
@@ -29,20 +29,7 @@
   <li><a href="" routerLink="users/post-reading" >Muro</a></li>
   <li><a href="" routerLink="users/post-form" >Crear un post</a></li>   
   <li><a href="" routerLink="auth/login">Login</a></li>
-  
-  
 </ul>
           
 <script>
-  // function myFunction() {
-  //   var x = document.getElementById('userLog');
-  //   if(x.style.display=== "none"){
-  //     return;
-  //     document.getElementById('userLogin').style.display = 'none'
-  //   }else{
-  //     document.getElementById('userLogin').style.display = 'block'
-  //   }
-  // } 
-    
-  // myFunction();
 </script>
