logout, close session, delete localstorage and options module

--- a/src/app/modules/system/home/home.component.html
+++ b/src/app/modules/system/home/home.component.html
@@ -1,9 +1,19 @@
 <title>Home | In</title>
 
+<style>
+    .headcito{
+        color: gray;
+        margin-bottom: 60px; 
+    }
+</style>
+
 <div class="container">
     
-    <h1>Welcome users!</h1>
-    <span >{{userData.role}} </span>
+    <div class="headcito">
+        <h1>Welcome users!</h1>
+    </div>
+
+    <app-options></app-options> 
 
 </div>
 
