admin can delete post request from database using api method

--- a/src/app/modules/admin/post-approval/post-approval.component.html
+++ b/src/app/modules/admin/post-approval/post-approval.component.html
@@ -41,7 +41,7 @@
                     <a class="btn-floating "><i class="material-icons">add</i></a>
                     </td>
                     <td>  
-                    <a class="btn-floating "><i class="material-icons">clear</i></a>
+                    <a class="btn-floating" (click)="deletePost(item.id)"> <i class="material-icons">clear</i> </a>
                     </td>
                 </tr>
                 
