--- a/src/app/template/nav-bar/nav-bar.component.html
+++ b/src/app/template/nav-bar/nav-bar.component.html
@@ -14,17 +14,9 @@
       <a href="" routerLink="home" class="brand-logo">Confesiones.com</a>   
       <a href="" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="" routerLink="users/post-reading" >Muro</a></li>
-        <!-- <li  ><a href="" routerLink="users/post-form" >Crear un post</a></li>   
-        <li  ><a href="" routerLink="auth/login">Guardados</a></li>
-        <li  ><a href="" routerLink="**">Opciones</a></li> -->
-        <li id="userLogin"><a href="" routerLink="auth/login">Login</a></li>
-        <li><span id="userLog"></span></li> 
-        <!-- <li id="userLogin"><a href="" *ngIf="userData.role=='user'" routerLink="auth/login">Logout</a></li> -->
-        
+        <li><a href="" routerLink="/users/post-reading" >Muro</a></li>
+        <li id="userLogin"><a href="" routerLink="/auth/login">Login</a></li>
       </ul>
-
-
     </div>
 </nav>
 
@@ -32,6 +24,7 @@
   <li><a href="" routerLink="users/post-reading" >Muro</a></li>
   <li><a href="" routerLink="users/post-form" >Crear un post</a></li>   
   <li><a href="" routerLink="auth/login">Login</a></li>
+  
 
 </ul>
           
