admin can path through api method to publish a post

--- a/src/app/modules/admin/post-approval/post-approval.component.html
+++ b/src/app/modules/admin/post-approval/post-approval.component.html
@@ -38,7 +38,7 @@
                     <td>{{item.category}}</td>
                     <td>{{item.text}}</td>
                     <td>  
-                    <a class="btn-floating "><i class="material-icons">add</i></a>
+                    <a class="btn-floating" (click)="updatePost(item.id)"><i class="material-icons">publish</i></a>
                     </td>
                     <td>  
                     <a class="btn-floating" (click)="deletePost(item.id)"> <i class="material-icons">clear</i> </a>
