--- a/src/app/modules/users/post-reading/post-reading.component.html
+++ b/src/app/modules/users/post-reading/post-reading.component.html
@@ -46,19 +46,26 @@
   </div>
 
   
-      
+  <ng-container *ngFor="let item of postList">
+
+    <div class="card">
+      <div class="card-content">
+        <span class="card-title activator grey-text text-darken-4">{{item.title}}<i class="material-icons right">more_vert</i></span>
+        <p>{{item.category}}</p>
+        <p>{{item.text}}</p>
+        <p>{{item.publishedDate}}</p>
+
+      </div>
+      <div class="card-reveal">
+        <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
+        <p>Here is some more information about this product that is only revealed once clicked on.</p>
+      </div>
+    </div>
+
+  </ng-container>
+  
 
 
-  <div class="card">
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Card Title<i class="material-icons right">more_vert</i></span>
-      <p><a href="#">This is a link</a></p>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Card Title<i class="material-icons right">close</i></span>
-      <p>Here is some more information about this product that is only revealed once clicked on.</p>
-    </div>
-  </div>
 </div>
 
 
