restructure of app and routing

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -45,7 +45,7 @@
         </div>
 
         <div>
-            <a href="" routerLink="/auth/register" id="registerPage">Registrarme</a>
+            <a routerLink="/register" id="registerPage">Registrarme</a>
         </div>
         
   
