--- a/src/app/template/home/home.component.html
+++ b/src/app/template/home/home.component.html
@@ -1,13 +1,4 @@
-<title>Confesiones | Home</title>
-
-<style>
-    .headcito{
-        color: gray;
-        margin-bottom: 60px;  
-    }
-</style>
-
-<!-- <app-nav-bar></app-nav-bar> -->
+<title>Confesiones</title>
 
 <div class="container">
 
